--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="display-absolute">
         <div id="view-high-scores"><p>View High Scores</p></div>
-        <div id="countdownDisplay"><p>00:00</p></div>
+        <div id="countdownDisplay"><p id="time">00:00</p></div>
     </section>    
     
     <section class="wrapper">
@@ -47,7 +47,7 @@
             <button onclick="checkAnswers(event)" id="answer0">Data Occurrence Mode</button>
             <button onclick="checkAnswers(event)" id="answer1">Document Outstanding Method</button>
             <button onclick="checkAnswers(event)" id="answer2">Document Object Model</button>
-            <button id="answer3">Distributed Object Model</button>
+            <button onclick="checkAnswers(event)" id="answer3">Distributed Object Model</button>
         </div>
      </section>
 
