changes to check answer funciton

--- a/index.html
+++ b/index.html
@@ -21,43 +21,43 @@
      </div>  
     
     
-     <section class="hidden" id="question1">
+     <section class="hidden" id="question0">
         <h2 id="question-title">What is used to indicate an array</h2>
         <div class="answers">
-            <button onclick="checkAnswers(event)" id="answer0">{}</button>
-            <button onclick="checkAnswers(event)" id="answer1">[]</button>
-            <button onclick="checkAnswers(event)" id="answer2">&&</button>
-            <button onclick="checkAnswers(event)" id="answer3">()</button>
+            <button onclick="checkAnswers(event)" class="answer">{}</button>
+            <button onclick="checkAnswers(event)" class="answer">[]</button>
+            <button onclick="checkAnswers(event)" class="answer">&&</button>
+            <button onclick="checkAnswers(event)" class="answer">()</button>
+        </div>
+     </section>
+
+     <section class="hidden" id="question1">
+        <h2 id="question-title">Within HTML where do we put our JavaScript?</h2>
+        <div class="answers">
+            <button onclick="checkAnswers(event)" class="answer" id="answer0">script tags</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer1">logic tags</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer2">JavaScript tags</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer3">style tags</button>
         </div>
      </section>
 
      <section class="hidden" id="question2">
-        <h2 id="question-title">Within HTML where do we put our JavaScript?</h2>
+        <h2 id="question-title">What does DOM stand for</h2>
         <div class="answers">
-            <button onclick="checkAnswers(event)" id="answer0">script tags</button>
-            <button onclick="checkAnswers(event)" id="answer1">logic tags</button>
-            <button onclick="checkAnswers(event)" id="answer2">JavaScript tags</button>
-            <button onclick="checkAnswers(event)" id="answer3">style tags</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer0">Data Occurrence Mode</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer1">Document Outstanding Method</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer2">Document Object Model</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer3">Distributed Object Model</button>
         </div>
      </section>
 
      <section class="hidden" id="question3">
-        <h2 id="question-title">What does DOM stand for</h2>
-        <div class="answers">
-            <button onclick="checkAnswers(event)" id="answer0">Data Occurrence Mode</button>
-            <button onclick="checkAnswers(event)" id="answer1">Document Outstanding Method</button>
-            <button onclick="checkAnswers(event)" id="answer2">Document Object Model</button>
-            <button onclick="checkAnswers(event)" id="answer3">Distributed Object Model</button>
-        </div>
-     </section>
-
-     <section class="hidden" id="question4">
         <h2 id="question-title">who invented JavaScript? </h2>
         <div class="answers">
-            <button onclick="checkAnswers(event)" id="answer0">John Carmack</button>
-            <button onclick="checkAnswers(event)" id="answer1">Lex Fridman</button>
-            <button onclick="checkAnswers(event)" id="answer2">Brendan Eich</button>
-            <button onclick="checkAnswers(event)" id="answer3">Guido van Rossum</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer0">John Carmack</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer1">Lex Fridman</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer2">Brendan Eich</button>
+            <button onclick="checkAnswers(event)" class="answer" id="answer3">Guido van Rossum</button>
         </div>
      </section>
 
