got it to work better. Fixed the timer and updated the end screen functionality

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
      </section>
 
      
-     <section class="hidden" id="log-score">
+     <section class="hidden" id="question4">
         <h2>GAME OVER</h2>
         <p>How fast did you think and how carefully did you click?
             Log your score and break it quick. <span id="your-score"></span>.</p>
         <p>Enter your initials: <input type="text" id="initials" max="4"/>
-            <button id="Submit">Submit</button></p>
+            <button id="Submit" onclick="submit()">Submit</button></p>
+        <p>High Scores</p>
+        <p id="yourScore">Your Score = </p>
      </section>
 
 
