--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
             Log your score and break it quick. <span id="your-score"></span>.</p>
         <p>Enter your initials: <input type="text" id="initials" max="4"/>
             <button id="Submit" onclick="submit()">Submit</button></p>
-        <p>High Scores</p>
-        <p id="yourScore">Your Score = </p>
+            <button id="PlayAgain" onclick="playAgain()">Play Again</button>
+            <p id="yourScore">Your Score </p>
+            <p>High Scores</p>
+                <ul></ul>
      </section>
 
 
