I don't know what I did, but there's new code that doesn't seem to do anything.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Log your score and break it quick. <span id="your-score"></span>.</p>
         <p>Enter your initials: <input type="text" id="initials" max="4"/>
             <button id="Submit" onclick="submit()">Submit</button></p>
-            <button id="PlayAgain" onclick="playAgain()">Play Again</button>
+            <button id="PlayAgain" onclick="playAgain(), saveHighScore()">Play Again</button>
             <p id="yourScore">Your Score </p>
             <p>High Scores</p>
                 <ul></ul>
